# simplicity-ng

./: .gitignore  Cargo.toml  README.md
core-tt/: Cargo.toml  README.md  todo.txt
core-tt/core-tt-macros/: Cargo.toml
core-tt/core-tt-macros/src/: lib.rs
core-tt/fuzz/: Cargo.toml
core-tt/fuzz/fuzz_targets/: fuzz_target_1.rs
core-tt/src/: arbitrary.rs  as_term.rs  core.rs  intern.rs  lib.rs  node_stats.rs  non_zero_big_uint.rs  pprint.rs  priv_prelude.rs  raw.rs  sanity_check.rs  scheme.rs  test.rs  usages.rs  util.rs
core-tt/src/core/: contextual.rs  ctx.rs  mod.rs  nat.rs  pack.rs  scope.rs  stuck.rs  term.rs  ty.rs
core-tt/src/raw/: contextual.rs  ctx.rs  mod.rs  nat.rs  pack.rs  scope.rs  stuck.rs  term.rs  ty.rs  typed.rs
core-tt/tests/: derive_contextual.rs  eta.rs  substitution.rs
debug/: Cargo.toml
debug/src/: lib.rs
inference/: Cargo.toml
inference/src/: infer_scope.rs  lib.rs  priv_prelude.rs  reduction.rs  test.rs  util.rs  wow.out
more-tt/: Cargo.toml
more-tt/src/: contractible.rs  ctx.rs  epi.rs  equiprovable.rs  inj.rs  iso.rs  lib.rs  priv_prelude.rs  scope.rs  stuck.rs  term.rs  ty.rs  uninhabited.rs  util.rs
parser/: Cargo.toml
parser/src/: ast.rs  combinators.rs  debug.rs  lib.rs  parse.rs  parser.rs  priv_prelude.rs  span.rs  token.rs
small-bit-vec/: Cargo.toml
small-bit-vec/fuzz/: Cargo.toml
small-bit-vec/fuzz/fuzz_targets/: fuzz_target_1.rs
small-bit-vec/src/: lib.rs  small_bit_vec.rs  test.rs
typecheck/: Cargo.toml
typecheck/src/: core.rs  lib.rs  name.rs  priv_prelude.rs  typecheck.rs
