[package]
name = "core-tt"
version = "0.1.0"
edition = "2024"

[dependencies]
core-tt-macros = { path = "core-tt-macros" }
small-bit-vec = { path = "../small-bit-vec" }
debug = { path = "../debug" }
arbitrary = { version = "*", optional = true }
num = "0.4.3"
im = "*"
indexmap = "*"
lazy_static = "*"
derive-where = "*"

[features]
default = ["pretty-formatting"]
arbitrary = ["dep:arbitrary"]
pretty-formatting = []

